[package]
name = "pair_wise_max"
version = "0.1.0"
authors = ["Aryan-dev007 <aryansinha6363@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"